--- a/secao23/src/gui/DepartmentList.fxml
+++ b/secao23/src/gui/DepartmentList.fxml
@@ -28,7 +28,8 @@
         <columns>
           <TableColumn fx:id="tableColumnId" prefWidth="75.0" text="ID" />
           <TableColumn fx:id="tableColumnName" prefWidth="75.0" text="NAME" />
-            <TableColumn fx:id="tableColumnEDIT" prefWidth="44.0" />
+            <TableColumn fx:id="tableColumnEDIT" prefWidth="59.0" />
+            <TableColumn fx:id="tableColumnREMOVE" prefWidth="73.0" />
         </columns>
       </TableView>
    </children>
